Thu Mar  9 00:08:52 UTC 2007  Ossama Othman  <ossama_othman at symantec dot com>

        * orbsvcs/orbsvcs/Naming/Flat_File_Persistence.cpp (operator>>):

          Addressed problem where ACE_CString length was not set, which
          resulted in no-op copy to another ACE_CString.

Thu Mar  8 21:27:54 UTC 2007  Steve Huston  <shuston@riverace.com>

        * orbsvcs/IFR_Service/be_init.cpp (BE_save_orb_args):
        * orbsvcs/orbsvcs/AV/FlowSpec_Entry.cpp (get_local_addr_str):
        * orbsvcs/orbsvcs/IFRService/IRObject_i.cpp (update_key):
        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Profile.cpp:
        * orbsvcs/orbsvcs/Log/Log_Constraint_Visitors.cpp:
        * orbsvcs/orbsvcs/Notify/Notify_Constraint_Visitors.cpp:
        * tao/TypeCodeFactory/TypeCodeFactory_i.cpp (valid_id):

Thu Mar  8 17:49:52 UTC 2007  Trevor Fields  <fields_t@ociweb.com>

          Fixed the Event Service crashing when dispatching
          queue fills up and using the MT dispatching.

        * orbsvcs/orbsvcs/Event/EC_Dispatching_Task.cpp:

          Check for non-NULL TAO_EC_Queue_Full_Service_Object before
          attempting to use.

        * orbsvcs/orbsvcs/Event/EC_MT_Dispatching.cpp:

          Pass in the TAO_EC_Queue_Full_Service_Object reference into
          the TAO_EC_Dispatching_Task constrcutor.

        * orbsvcs/tests/EC_Throughput/ECT_Consumer.cpp:
        * orbsvcs/tests/EC_Throughput/ECT_Consumer.h:
        * orbsvcs/tests/EC_Throughput/ECT_Consumer_Driver.cpp:
        * orbsvcs/tests/EC_Throughput/ECT_Consumer_Driver.h:

          Add -o parameter to delay the client for a number of
          seconds upon the reception of the first event.

        * orbsvcs/tests/EC_Throughput/ec_mt_overflow.conf:
        * orbsvcs/tests/EC_Throughput/ec_mt_overflow.conf.xml:
        * orbsvcs/tests/EC_Throughput/run_test_overflow.pl:

          Added a test to try and stress the event service enough
          to fill a dispatching queue.  This test does not always